_sass/main.scss
/* ... */
.footer {
  height: 260px;
  background: url("../images/hash.png") no-repeat;
  background-position: 80% 100%;
  background-size: 158px 164px;
  text-align: center;
  font-size: 14px;
  line-height: 22px;
  padding-top: 0;
  margin-top: 100px;
  p {
    margin-bottom: 0;
  }
  .container {
    max-width: 340px;
  }
}

.site-header {
  .container {
    max-width: 100%;
    padding: 0;
  }
}

// Small devices (landscape phones, 576px and up)
@media (max-width: 767px) {
  .container {
    max-width: 420px;
  }
  .nav {
    padding: 175px 0 35px;
  }
  .main-nav {
    .navbar-collapse {
      position: absolute;
      top: 0;
      z-index: 3;
      transition: left 0.35s ease;
      background: url("../images/menu-orange-bg.png");
      background-position: left bottom;
      background-size: cover;

      &.collapse {
        left: 100%;
        display: block;
        width: 100%;
      }
      &.show {
        left: 0;
      }
      &.collapsing {
        position: absolute;
        height: auto;
        overflow: hidden;
        left: 100%;
      }
      li {
        width: 100%;
        &.facebook-icon {
          display: none;
        }
        a {
          color: #fff;
          font-size: 25px;
          line-height: 30px;
          padding: 20px 0 37px 20px;
        }
      }
    }
  }
  .hero-image {
    .logo {
      width: 189px;
      height: 143px;
      top: -46px;
      left: 0;
    }
    .tagline {
      width: 155px;
      height: 38px;
      top: 75px;
      left: 22px;
    }
  }
  .main-nav-section {
    margin-top: 82px;
    h1 {
      font-size: 50px;
      line-height: 52px;
      margin: 0 0 42px 0;
      &:after {
        bottom: -23px;
      }
    }
  }
  .what-is-spodari {
    background: url("../images/white-bg.png") no-repeat;
    background-size: contain;
    background-position: 50% 0;
    margin-top: -170px;
    padding-top: 80px;
    position: relative;
  }
  .statistics {
    .money {
      margin-bottom: 30px;
    }
    .numerical {
      margin-bottom: 10px;
    }
    .icon-container {
      margin-bottom: 10px;
      height: 60px;
    }
    .money {
      .icon {
        width: 69px;
        height: 53px;
      }
    }
    .minutes {
      .icon {
        width: 40px;
        height: 53px;
      }
    }
    .events {
      .icon {
        width: 46px;
        height: 53px;
      }
    }
  }
  .partners {
    .partner-image {
      height: 104px;
      width: 104px;
      -webkit-border-radius: 52px;
      -moz-border-radius: 52px;
      border-radius: 52px;
      margin-bottom: 20px;
    }
  }
  .footer {
    height: 770px;
    background-position: 50% 100%;
    background-size: 158px 164px;
  }
}

@media (min-width: 767px) {
  .hero-image {
    .logo {
      width: 325px;
      height: 244px;
      top: -61px;
      left: 0;
    }
    .tagline {
      width: 268px;
      height: 66px;
      top: 145px;
      left: 36px;
    }
  }
  .main-content {
    background-image: url("../images/background-logo.png"), url("../images/background-hashtag.png");
    background-repeat: no-repeat, no-repeat;
    background-size: 1186px 835px, 509px 940px;
    background-position: top left, 100% 40%;
  }
  .main-nav-section {
    margin-top: 144px;
    h1 {
      font-size: 54px;
      line-height: 65px;
      margin: 0 0 72px 0;
      &:after {
        bottom: -35px;
      }
    }
  }
  .statistics {
    .money {
      margin-bottom: 0;
    }
    .numerical {
      margin-bottom: 20px;
    }
    .icon-container {
      margin-bottom: 30px;
      height: 114px;
    }
    .money {
      .icon {
        width: 131px;
        height: 114px;
      }
    }
    .minutes {
      .icon {
        width: 80px;
        height: 104px;
      }
    }
    .events {
      .icon {
        width: 90px;
        height: 96px;
      }
    }
  }
  .partners {
    .partner-image {
      height: 144px;
      width: 144px;
      -webkit-border-radius: 72px;
      -moz-border-radius: 72px;
      border-radius: 72px;
    }
  }
}

